--- a/.github/workflows/consolidate.yml
+++ b/.github/workflows/consolidate.yml
@@ -32,3 +32,28 @@ jobs:
             echo "Consolidated JSON file does not exist."
             exit 1
           fi
+
+      - name: Commit consolidated file
+        run: |
+          git config --global user.email "github-actions@github.com"
+          git config --global user.name "GitHub Actions"
+
+          # Add files to staging
+          git add consolidated.json consolidated.dokbin
+
+          # Check if there are changes to commit
+          if git diff-index --quiet HEAD; then
+            echo "No changes to commit"
+            exit 0
+          fi
+
+          # Commit changes
+          git commit -m "Add consolidated JSON file"
+          git remote set-url origin https://github.com/${{ github.repository }}.git
+
+      - name: Push changes # push the output folder to your repo
+        if: success()
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          force: false
