--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on: [push]
 jobs:
   hello_world_job:
     runs-on: ubuntu-latest
-    name: A job to say hello
+    name: Update the dir.jon
     steps:
       - uses: actions/checkout@v2      
       - name: Hello world action step
@@ -14,7 +14,8 @@ jobs:
 
       - name: Commit files # transfer the new html files back into the repository
         run: |
-          git config --local user.name "jacklehamster"
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"          
           git add .
           git diff --quiet && git diff --staged --quiet || git commit -m "Updating"
         
