--- a/.github/workflows/consolidate.yml
+++ b/.github/workflows/consolidate.yml
@@ -1,13 +1,6 @@
-name: CI Workflow
+name: Consolidate JSON
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-  workflow_dispatch:
+on: [push]
 
 jobs:
   build:
