--- a/.github/workflows/consolidate.yml
+++ b/.github/workflows/consolidate.yml
@@ -10,6 +10,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+
+      - name: Install dependencies
+        run: npm install dok-compression
+
+      - name: Build project
+        run: npm run build
+
       - name: Consolidate JSON
         uses: jacklehamster/dok-compression-action@v1.1.1
         with:
