--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"          
           git add .
-          git diff --quiet && git diff --staged --quiet || git commit -m "Updating"
+          git diff --quiet && git diff --staged --quiet || git commit -m "Updating dir.json via Github Action"
 
       - name: Push changes # push the output folder to your repo
         uses: ad-m/github-push-action@master
